MFH: Fixed bug #32011 (Fragments which replaced Nodes are not globaly useable)